# handily

./: .gitignore  README.md  handily_repo.txt  handily_repo_13NOV.txt  mkdocs.yml  nohup.out  pyproject.toml  run_rf_aniso_0773.py
configs/: mt_rem.toml  nm_rem.toml  nv_rem.toml
configs/rem/: 0773_1m.toml  0773_defaults.toml  0773_exp1_489_tune.toml  0773_idw1k.toml  mt_0001.toml  mt_0007.toml  mt_0008.toml  mt_0009.toml  mt_0010.toml  mt_0012.toml  mt_0015.toml  mt_0033.toml  mt_0034.toml  mt_0035.toml  mt_0036.toml  mt_0039.toml  mt_mh_beaverhead_subset_10m.toml  mt_mh_beaverhead_subset_10m_dense_s2.toml  mt_missouri_headwaters_10m.toml  mt_ruby_fac10_baseline.toml  mt_ruby_fac10_v2_drier.toml  mt_ruby_fac10_v3_wetter.toml  mt_ruby_fac10_v4_sag.toml  mt_ruby_fac10_v5_belowbed.toml  nm_rio_grande_fac10_v3_wetter.toml  nm_rio_grande_fac10_v4_naip_support.toml
configs/wte/: nm_rga_hybrid_v0.toml
docs/: cli_reference.md  configuration.md  index.md  outputs.md  overview.md  requirements.txt
docs/examples/: beaverhead.md
docs/operations/: aoi.md  exports_sync.md  qgis.md  stac.md
docs/workflows/: met_et.md  partition.md  rem.md  stratification.md
examples/: README.md
examples/beaverhead/: 01_introduction.ipynb  02_terrain_analysis.ipynb  03_field_classification.ipynb  03_points_sampling.ipynb  04_behavioral_grouping.ipynb  04_climate_and_et.ipynb  05_et_partitioning.ipynb  05_field_classification.ipynb  06_climate_and_et.ipynb  07_et_partitioning.ipynb  beaverhead.py  beaverhead_config.toml  notebook_plan.md  run_bvr.py
notes/: DOCS_PLAN.md  algorithm.md  fac_algorithm.md  fac_pipeline.md
scripts/: beaverhead.py  beaverhead_config.yaml  run_bvr.py
src/handily/: __init__.py  aoi_split.py  bucket.py  cli.py  climate_normals.py  compute.py  config.py  core.py  dem.py  io.py  naip.py  naip_rf.py  ndwi_export.py  nhd.py  pattern.py  pipeline.py  (+14 more)
tests/: test_anisotropic_rem.py  test_build_aridity_climatology.py  test_build_conus_fac_rem.py  test_build_conus_graph_inputs.py  test_build_modis_ndvi_climatology.py  test_build_stacker_features.py  test_build_wte_anchors.py  test_build_wte_graph_inputs.py  test_build_wte_regional.py  test_build_wte_surface.py  test_rem_experimental.py  test_rem_fac.py  test_rem_fac_burn.py  test_rem_fac_config.py  test_rem_fac_head.py  test_rem_fac_topology.py  test_rem_sag.py  test_rem_surface_relax.py  test_train_wte_fac_stacker.py  test_train_wte_gnn.py  test_validate_regional_prior_gwx.py  test_wte_regional_prior.py
utils/: bench_fac_strips.py  build_aridity_climatology.py  build_basin_naip_evidence.py  build_basin_naip_ndvi_multiyear.py  build_basin_naip_water_multiyear.py  build_conus_anchors.py  build_conus_fac_rem.py  build_conus_graph_inputs.py  build_conus_hand_wells.py  build_conus_reach_graph.py  build_gwx_wte_labels.py  build_modis_ndvi_climatology.py  build_nm_independent_wells.py  build_nm_validation_layer.py  build_regional_fac.py  build_ruby_domain.py  build_ruby_gwx_labels.py  build_s2_wetness_seed.py  build_scalable_fac_rem.py  build_stacker_features.py  build_wte_anchors.py  build_wte_covariate_table.py  build_wte_graph_inputs.py  build_wte_regional.py  build_wte_regional_prior.py  build_wte_surface.py  clean_naip_support_to_channel.py  clip_regional_to_aois.py  compare_fac_ma.py  compare_ma_janssen_v1.py  conus_hand_adds_test.py  conus_hand_probe.py  conus_idw_baseline.py  diagnose_wte_residuals.py  fetch_conus_nhd_geom.py  figure_fac_workflow.py  flow_accumulation_network.py  gwx_wells.py  nm_ag_well_density.py  rank_variants.py  (+22 more)
(+19 files in other folders)
