[build-system]

requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "handily"
version = "0.1.0"
description = "Height Above Nearest Drainage (REM/HAND) stratification and Leaflet visualization"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "dgketchum" }
]
keywords = ["hydrology", "GIS", "DEM", "HAND", "REM", "geospatial", "NHD", "3DEP", "raster"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "numpy>=1.24",
  "geopandas>=0.13",
  "rasterio>=1.3",
  "rioxarray>=0.14",
  "xarray>=2023.1",
  "scipy>=1.10",
  "rasterstats>=0.19",
  "pynhd>=0.15",
  "shapely>=2.0",
  "fiona>=1.9",
  "affine>=2.4",
  "pystac>=1.8",
  "requests>=2.31",
  "tqdm>=4.65",
  "matplotlib>=3.10.8",
  "scikit-learn>=1.3",
  "whitebox>=2.3.6",
  "torch==2.12.1",
  "torch-geometric>=2.8.0",
  "pystac-client>=0.9.0",
  "planetary-computer>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "mypy",
]
ee = [
  "earthengine-api>=1.0",
]

[project.urls]
Homepage = "https://example.com/handily"

[project.scripts]
handily = "handily.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/handily"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
  "LICENSE",
  "scripts",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

# Pin torch to a CUDA 12.6 wheel: the default PyPI torch 2.12 is a cu130 (CUDA 13)
# build that the system driver (12.2) is too old to initialize. cu126 is the same
# major (12) as the driver, so minor-version compatibility applies and the GPU is
# usable. No cu121/cu124 wheels exist for torch 2.12.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
